--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,4 @@ buildNumber.properties
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,maven,java
+.vscode/settings.json
